Fixed issue with image details button way bleeding out of card

--- a/src/app/components/core/contact-us/contact-us.component.html
+++ b/src/app/components/core/contact-us/contact-us.component.html
@@ -51,19 +51,36 @@
                                         id="subject"
                                         required
                                         formControlName="subject">
-                                    <option selected>Select A Subject</option>
-                                    <option value="Abstract Submission">Abstract Submission</option>
-                                    <option value="Registration">Registration</option>
-                                    <option value="Housing">Housing</option>
-                                    <option value="Program/Scientific Sessions">Program/Scientific Sessions</option>
-                                    <option value="Exhibits, Sponsorships and Marketing Opportunities">Exhibits,
-                                        Sponsorships and Marketing Opportunities
+                                    <option selected>
+                                        Select A Subject
                                     </option>
-                                    <option value="DDW Newsroom and Media Inquiries">DDW Newsroom and Media Inquiries
+                                    <option value="Abstract Submission">
+                                        Abstract Submission
                                     </option>
-                                    <option value="Marketing and Promotions">Marketing and Promotions</option>
-                                    <option value="Mobile App">Mobile App</option>
-                                    <option value="Travel Awards">Travel Awards</option>
+                                    <option value="Registration">
+                                        Registration
+                                    </option>
+                                    <option value="Housing">
+                                        Housing
+                                    </option>
+                                    <option value="Program/Scientific Sessions">
+                                        Program/Scientific Sessions
+                                    </option>
+                                    <option value="Exhibits, Sponsorships and Marketing Opportunities">
+                                        Exhibits, Sponsorships and Marketing Opportunities
+                                    </option>
+                                    <option value="DDW Newsroom and Media Inquiries">
+                                        DDW Newsroom and Media Inquiries
+                                    </option>
+                                    <option value="Marketing and Promotions">
+                                        Marketing and Promotions
+                                    </option>
+                                    <option value="Mobile App">
+                                        Mobile App
+                                    </option>
+                                    <option value="Travel Awards">
+                                        Travel Awards
+                                    </option>
                                     <option value="Other">Other</option>
                                 </select>
                                 <p class="help-block alert alert-warning text-center mt-1"
