Changed card-deck to col-md-4 bc IE 11 doesn't render those boostrap cards

--- a/src/app/components/admin/admin-core/admin-cards/admin-cards.component.html
+++ b/src/app/components/admin/admin-core/admin-cards/admin-cards.component.html
@@ -1,5 +1,5 @@
 <!-- * CARDS * -->
-<div class="card text-center mt-3 mb-3">
+<div class="card text-center m-3">
     <img class="card-img-top"
          [src]="card.photoURL"
          [alt]="card.title">
