--- a/src/app/components/admin/admin-core/admin-featured-blog-posts/admin-featured-blog-posts.component.html
+++ b/src/app/components/admin/admin-core/admin-featured-blog-posts/admin-featured-blog-posts.component.html
@@ -1,5 +1,5 @@
 <!-- * ADMIN-FEATURED-BLOG-POSTS * -->
-<div class="card text-center">
+<div class="card text-center ml-3 mr-3">
     <div class="row">
         <div class="col-sm-10 offset-sm-1">
             <img class="card-img-top rounded-circle img-fluid text-center"
