--- a/src/app/components/pages/education/education.component.html
+++ b/src/app/components/pages/education/education.component.html
@@ -68,9 +68,9 @@
 
     <div class="row cards" *ngIf="page.hasCards">
         <div class="container">
-            <div class="card-deck">
-                <div class="row">
-                    <!-- * Card 1 * -->
+            <div class="row">
+                <!-- * Card 1 * -->
+                <div class="col-md-4">
                     <div class="card text-center mb-3" *ngIf="pageCard1">
                         <img class="card-img-top"
                              [src]="pageCard1.photoURL"
@@ -93,7 +93,9 @@
                             </p>
                         </div>
                     </div>
-                    <!-- * Card 2 * -->
+                </div>
+                <!-- * Card 2 * -->
+                <div class="col-md-4">
                     <div class="card text-center mb-3" *ngIf="pageCard2">
                         <img class="card-img-top"
                              [src]="pageCard2.photoURL"
@@ -116,7 +118,9 @@
                             </p>
                         </div>
                     </div>
-                    <!-- * Card 3 * -->
+                </div>
+                <!-- * Card 3 * -->
+                <div class="col-md-4">
                     <div class="card text-center mb-3" *ngIf="pageCard3">
                         <img class="card-img-top"
                              [src]="pageCard3.photoURL"
@@ -141,6 +145,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
     <!-- * AD Footerbar * -->
