--- a/src/app/components/pages/register/register.component.html
+++ b/src/app/components/pages/register/register.component.html
@@ -72,9 +72,9 @@
 
     <div class="row cards" *ngIf="page.hasCards">
         <div class="container">
-            <div class="card-deck">
-                <div class="row">
-                    <!-- * Card 1 * -->
+            <div class="row">
+                <!-- * Card 1 * -->
+                <div class="col-md-4">
                     <div class="card text-center mb-3" *ngIf="pageCard1">
                         <img class="card-img-top"
                              [src]="pageCard1.photoURL"
@@ -97,7 +97,9 @@
                             </p>
                         </div>
                     </div>
-                    <!-- * Card 2 * -->
+                </div>
+                <!-- * Card 2 * -->
+                <div class="col-md-4">
                     <div class="card text-center mb-3" *ngIf="pageCard2">
                         <img class="card-img-top"
                              [src]="pageCard2.photoURL"
@@ -120,7 +122,9 @@
                             </p>
                         </div>
                     </div>
-                    <!-- * Card 3 * -->
+                </div>
+                <!-- * Card 3 * -->
+                <div class="col-md-4">
                     <div class="card text-center mb-3" *ngIf="pageCard3">
                         <img class="card-img-top"
                              [src]="pageCard3.photoURL"
@@ -145,6 +149,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
 
