Updated README for links to firebase for beginners

--- a/src/app/components/core/alert-modal/alert-modal.component.html
+++ b/src/app/components/core/alert-modal/alert-modal.component.html
@@ -9,7 +9,7 @@
     <p>
         There are several rogue registration and housing sites that are posting information for the 2019 meeting and are
         not
-        affiliated with DDW. Registration and housing open in January 2019. Official registration and housing
+        affiliated with DDW. Attendee registration and housing open in January 2019. Official registration and housing
         information
         will only come from a @ddw.org email address. If there are any questions about the authenticity of a company or
         email, please contact <a href="mailto:administration@ddw.org">DDW Administration</a>. For information regarding
