--- a/src/app/components/admin/admin-core/admin-images/admin-images.component.css
+++ b/src/app/components/admin/admin-core/admin-images/admin-images.component.css
@@ -4,8 +4,15 @@
     line-height: 1.5;
 }
 
+.image-card:hover {
+    -webkit-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+    -moz-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+}
+
 img.card-img-top {
     max-height: 10rem;
+    cursor: pointer;
 }
 
 .card-body {
@@ -36,4 +43,10 @@ code {
 
 .details {
     z-index: 1000;
+}
+
+.tip {
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
+    font-size: 12px;
+    line-height: 1.5;
 }
