--- a/src/app/components/admin/admin-core/admin-images/admin-images.component.css
+++ b/src/app/components/admin/admin-core/admin-images/admin-images.component.css
@@ -5,9 +5,15 @@
 }
 
 .image-card:hover {
-    -webkit-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-    -moz-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+    /*-webkit-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .1),*/
+    /*0 2px 2px 0 rgba(0, 0, 0, .1),*/
+    /*0 1px 5px 0 rgba(0, 0, 0, .1);*/
+    /*-moz-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .1),*/
+    /*0 2px 2px 0 rgba(0, 0, 0, .1),*/
+    /*0 1px 5px 0 rgba(0, 0, 0, .1);*/
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .1),
+    0 2px 2px 0 rgba(0, 0, 0, .1),
+    0 1px 3px 0 rgba(0, 0, 0, .1);
 }
 
 img.card-img-top {
@@ -17,10 +23,7 @@ img.card-img-top {
 
 .card-body {
     color: #444444;
-}
-
-.card-body {
-    color: #444444;
+    cursor: pointer;
 }
 
 code {
