--- a/src/styles.css
+++ b/src/styles.css
@@ -63,9 +63,15 @@ a:link.child {
     text-decoration: underline;
 }
 
-.image-uploader * {
+.image-uploader > * p  {
     font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
     font-size: 14px;
+    line-height: 1.5;
+}
+
+.image-uploader > * h4 {
+    font-family: 'Helvetica Neue', Roboto, Arial, sans-serif !important;
+    font-size: 1.3em;
     line-height: 1.5;
 }
 
