--- a/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
+++ b/src/app/components/admin/admin-core/admin-sidenav/admin-sidenav.component.html
@@ -19,7 +19,7 @@
 <div class="sidenav-divider mt-0"></div>
 
 <!-- Links -->
-<ul class="sidenav-inner py-1">
+<ul class="sidenav-inner py-1 pb-5">
 
     <!-- * Pages * -->
     <li class="sidenav-item"
