--- a/src/app/components/admin/admin-core/admin-files/admin-files.component.css
+++ b/src/app/components/admin/admin-core/admin-files/admin-files.component.css
@@ -5,13 +5,22 @@
 }
 
 .file-card:hover {
-    -webkit-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-    -moz-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+    -webkit-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .1),
+    0 2px 2px 0 rgba(0, 0, 0, .1),
+    0 1px 3px 0 rgba(0, 0, 0, .1);
+    -moz-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .1),
+    0 2px 2px 0 rgba(0, 0, 0, .1),
+    0 1px 3px 0 rgba(0, 0, 0, .1);
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .1),
+    0 2px 2px 0 rgba(0, 0, 0, .1),
+    0 1px 3px 0 rgba(0, 0, 0, .1);
 }
 
 .card-body {
     color: #444444;
+}
+
+p.card-body.file-types {
     cursor: pointer;
 }
 
