--- a/src/app/components/admin/admin-core/admin-images/admin-images.component.css
+++ b/src/app/components/admin/admin-core/admin-images/admin-images.component.css
@@ -5,12 +5,12 @@
 }
 
 .image-card:hover {
-    /*-webkit-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .1),*/
-    /*0 2px 2px 0 rgba(0, 0, 0, .1),*/
-    /*0 1px 5px 0 rgba(0, 0, 0, .1);*/
-    /*-moz-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .1),*/
-    /*0 2px 2px 0 rgba(0, 0, 0, .1),*/
-    /*0 1px 5px 0 rgba(0, 0, 0, .1);*/
+    -webkit-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .1),
+    0 2px 2px 0 rgba(0, 0, 0, .1),
+    0 1px 3px 0 rgba(0, 0, 0, .1);
+    -moz-box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .1),
+    0 2px 2px 0 rgba(0, 0, 0, .1),
+    0 1px 3px 0 rgba(0, 0, 0, .1);
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .1),
     0 2px 2px 0 rgba(0, 0, 0, .1),
     0 1px 3px 0 rgba(0, 0, 0, .1);
