--- a/src/app/components/admin/admin-page/admin-page-news-and-media-list/admin-page-news-and-media-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-news-and-media-list/admin-page-news-and-media-list.component.html
@@ -1,114 +1,130 @@
 <!-- * NEWS-AND-MEDIA-INFO-LIST * -->
 <!-- Layout content -->
 <div class="layout-content mb-5">
-  <!-- Content -->
-  <div class="container-fluid flex-grow-1 container-p-y">
+    <!-- Content -->
+    <div class="container-fluid flex-grow-1 container-p-y">
 
-    <div class="card p-3">
-      <h4 class="font-weight-bold py-3 mb-4 pl-2">
-        News &amp; Media Pages
-      </h4>
+        <div class="card p-3">
+            <h4 class="font-weight-bold py-3 mb-4 pl-2">
+                News & Media Pages
+            </h4>
 
-      <div class="card-datatable table-responsive">
-        <table id="user-list" class="table table-striped table-bordered table-hover">
-          <thead>
-          <tr>
-            <th scope="col" style="vertical-align: top;">Banner Image</th>
-            <th scope="col" style="vertical-align: top;">Body Image</th>
-            <th scope="col" style="vertical-align: top;">Title</th>
-            <th scope="col" style="vertical-align: top;">Category/Sort #</th>
-            <th scope="col" style="vertical-align: top;">External URL</th>
-            <th scope="col" style="vertical-align: top;">Published</th>
-            <th scope="col" style="vertical-align: top;">Publish <br> Date</th>
-            <th scope="col" style="vertical-align: top;">Author</th>
-            <th scope="col" style="vertical-align: top;">Options</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr *ngFor="let page of newsPage$ | async;">
-            <td scope="col">
-              <a [routerLink]="['/admin/pages/', page.url]">
-                <img [src]="page.bannerPhotoURL"
-                     class="page-image">
-              </a>
-            </td>
-            <td scope="col">
-              <a [routerLink]="['/admin/pages/', page.url]">
-                <img [src]="page.photoURL"
-                     class="page-image">
-              </a>
-            </td>
-            <td scope="col">
-              <a [routerLink]="['/admin/pages/', page.url]" class="text-truncate">
-                {{ page.title | slice:0:20 }}
-              </a>
-            </td>
-            <td scope="col">
-              <a [routerLink]="['/admin/pages/', page.url]" class="btn btn-default">
-                {{ page.category }} <span class="badge">{{ page.sortOrder }}</span>
-              </a>
-            </td>
-            <td scope="col" style="text-align:center;">
+            <div class="card-datatable table-responsive">
+                <table id="user-list" class="table table-striped table-bordered table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col" style="vertical-align: top;">Body Image</th>
+                        <th scope="col" style="vertical-align: top;">Title</th>
+                        <th scope="col" style="vertical-align: top;">Category/Sort #</th>
+                        <th scope="col" style="vertical-align: top;">External URL</th>
+                        <th scope="col" style="vertical-align: top;">Published</th>
+                        <th scope="col" style="vertical-align: top;">Publish <br> Date</th>
+                        <th scope="col" style="vertical-align: top;">Calendar</th>
+                        <th scope="col" style="vertical-align: top;">Author</th>
+                        <th scope="col" style="vertical-align: top;">Cards</th>
+                        <th scope="col" style="vertical-align: top;">Grand-<br>child</th>
+                        <th scope="col" style="vertical-align: top;">Options</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let page of newsPage$ | async;">
+                        <td scope="col">
+                            <a [routerLink]="['/admin/pages/', page.url]">
+                                <img [src]="page.photoURL"
+                                     class="page-image">
+                            </a>
+                        </td>
+                        <td scope="col">
+                            <a [routerLink]="['/admin/pages/', page.url]" class="text-truncate">
+                                {{ page.title | slice:0:20 }}
+                            </a>
+                        </td>
+                        <td scope="col">
+                            <a [routerLink]="['/admin/', page.category]" class="btn btn-default">
+                                {{ page.category }} <span class="badge">{{ page.sortOrder }}</span>
+                            </a>
+                        </td>
+                        <td scope="col" style="text-align:center;">
                             <span class="badge badge-outline-success" *ngIf="page.isExtURL">
                                 Yes
                             </span>
-              <span class="badge badge-outline-danger" *ngIf="!page.isExtURL">
+                            <span class="badge badge-outline-danger" *ngIf="!page.isExtURL">
                                 No
                             </span>
-            </td>
-            <td scope="col" style="text-align:center;">
+                        </td>
+                        <td scope="col" style="text-align:center;">
                             <span class="badge badge-outline-success" *ngIf="page.published">
                                 Yes
                             </span>
-              <span class="badge badge-outline-danger" *ngIf="!page.published">
+                            <span class="badge badge-outline-danger" *ngIf="!page.published">
                                 No
                             </span>
-            </td>
-            <td scope="col" class="date">{{ page.date | date:'mediumDate' }}</td>
-            <td scope="col" style="text-align:center;">
-              <span>{{ page.author }}</span>
-            </td>
-            <!--<td scope="col" style="text-align:center;">-->
-            <!--<span class="badge badge-outline-success" *ngIf="user.admin">-->
-            <!--Yes-->
-            <!--</span>-->
-            <!--<span class="badge badge-outline-danger" *ngIf="!user.admin">-->
-            <!--No-->
-            <!--</span>-->
-            <!--</td>-->
-            <td>
-              <a class="btn btn-default btn-xs icon-btn md-btn-flat user-tooltip"
-                 [routerLink]="['/admin/pages/', page.url]">
-                <i class="fa fa-pencil"></i>&nbsp;
-              </a>
-            </td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
+                        </td>
+                        <td scope="col" class="date">{{ page.date | date:'mediumDate' }}</td>
+                        <td scope="col" style="text-align:center;">
+                            <a [routerLink]="['/admin/calendar']">
+                                <span class="badge badge-outline-success" *ngIf="page.hasCalendar">
+                                <i class="fa fa-calendar-check"></i>
+                            </span>
+                            </a>
+                            <a [routerLink]="['/admin/calendar']">
+                                <span class="badge badge-outline-danger" *ngIf="!page.hasCalendar">
+                                <i class="fa fa-calendar-times"></i>
+                            </span>
+                            </a>
+                        </td>
+                        <td scope="col" style="text-align:center;">
+                            <span>{{ page.author }}</span>
+                        </td>
+                        <td scope="col" style="text-align:center;">
+                        <span class="badge badge-outline-success" *ngIf="page.hasCards">
+                            <i class="fa fa-check-circle"></i>
+                        </span>
+                            <span class="badge badge-outline-danger" *ngIf="!page.hasCards">
+                            <i class="fa fa-times-circle"></i>
+                        </span>
+                        </td>
+                        <td scope="col" class="text-center">
+                            <span class="badge badge-outline-success" *ngIf="page.isGrandchildPage">
+                            <i class="fa fa-check-square"></i>
+                        </span>
+                            <span class="badge badge-outline-danger" *ngIf="!page.isGrandchildPage">
+                            <i class="fa fa-times-square"></i>
+                        </span>
+                        </td>
+                        <td style="text-align:center;">
+                            <a class="btn btn-default btn-sm icon-btn md-btn-flat user-tooltip"
+                               [routerLink]="['/admin/pages/', page.url]">
+                                <i class="fa fa-pencil"></i>&nbsp;
+                            </a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
 
-      <nav aria-label="Page navigation example">
-        <ul class="pagination">
-          <li class="page-item">
-            <a class="page-link" [routerLink]="['/admin/pages']" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-              <span class="sr-only">Previous</span>
-            </a>
-          </li>
-          <li class="page-item"><a class="page-link" [routerLink]="['/admin/pages']">1</a></li>
-          <li class="page-item">
-            <a class="page-link" [routerLink]="['/admin/pages']" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-              <span class="sr-only">Next</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
+            <!--<nav aria-label="Page navigation example">-->
+            <!--<ul class="pagination">-->
+            <!--<li class="page-item">-->
+            <!--<a class="page-link" [routerLink]="['/admin/pages']" aria-label="Previous">-->
+            <!--<span aria-hidden="true">&laquo;</span>-->
+            <!--<span class="sr-only">Previous</span>-->
+            <!--</a>-->
+            <!--</li>-->
+            <!--<li class="page-item"><a class="page-link" [routerLink]="['/admin/pages']">1</a></li>-->
+            <!--<li class="page-item">-->
+            <!--<a class="page-link" [routerLink]="['/admin/pages']" aria-label="Next">-->
+            <!--<span aria-hidden="true">&raquo;</span>-->
+            <!--<span class="sr-only">Next</span>-->
+            <!--</a>-->
+            <!--</li>-->
+            <!--</ul>-->
+            <!--</nav>-->
+
+        </div>
 
     </div>
-
-  </div>
-  <!-- / Content -->
+    <!-- / Content -->
 
 
 </div>
