--- a/src/app/components/admin/admin-page/admin-page-register-list/admin-page-register-list.component.html
+++ b/src/app/components/admin/admin-page/admin-page-register-list/admin-page-register-list.component.html
@@ -13,25 +13,21 @@
                 <table id="user-list" class="table table-striped table-bordered table-hover">
                     <thead>
                     <tr>
-                        <th scope="col" style="vertical-align: top;">Banner Image</th>
                         <th scope="col" style="vertical-align: top;">Body Image</th>
                         <th scope="col" style="vertical-align: top;">Title</th>
                         <th scope="col" style="vertical-align: top;">Category/Sort #</th>
                         <th scope="col" style="vertical-align: top;">External URL</th>
                         <th scope="col" style="vertical-align: top;">Published</th>
                         <th scope="col" style="vertical-align: top;">Publish <br> Date</th>
+                        <th scope="col" style="vertical-align: top;">Calendar</th>
                         <th scope="col" style="vertical-align: top;">Author</th>
+                        <th scope="col" style="vertical-align: top;">Cards</th>
+                        <th scope="col" style="vertical-align: top;">Grand-<br> child</th>
                         <th scope="col" style="vertical-align: top;">Options</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr *ngFor="let page of regPage$ | async;">
-                        <td scope="col">
-                            <a [routerLink]="['/admin/pages/', page.url]">
-                                <img [src]="page.bannerPhotoURL"
-                                     class="page-image">
-                            </a>
-                        </td>
                         <td scope="col">
                             <a [routerLink]="['/admin/pages/', page.url]">
                                 <img [src]="page.photoURL"
@@ -44,7 +40,7 @@
                             </a>
                         </td>
                         <td scope="col">
-                            <a [routerLink]="['/admin/pages/', page.url]" class="btn btn-default">
+                            <a [routerLink]="['/admin/', page.category]" class="btn btn-default">
                                 {{ page.category }} <span class="badge">{{ page.sortOrder }}</span>
                             </a>
                         </td>
@@ -66,18 +62,38 @@
                         </td>
                         <td scope="col" class="date">{{ page.date | date:'mediumDate' }}</td>
                         <td scope="col" style="text-align:center;">
+                            <a [routerLink]="['/admin/calendar']">
+                                <span class="badge badge-outline-success" *ngIf="page.hasCalendar">
+                                <i class="fa fa-calendar-check"></i>
+                            </span>
+                            </a>
+                            <a [routerLink]="['/admin/calendar']">
+                                <span class="badge badge-outline-danger" *ngIf="!page.hasCalendar">
+                                <i class="fa fa-calendar-times"></i>
+                            </span>
+                            </a>
+                        </td>
+                        <td scope="col" style="text-align:center;">
                             <span>{{ page.author }}</span>
                         </td>
-                        <!--<td scope="col" style="text-align:center;">-->
-                        <!--<span class="badge badge-outline-success" *ngIf="user.admin">-->
-                        <!--Yes-->
-                        <!--</span>-->
-                        <!--<span class="badge badge-outline-danger" *ngIf="!user.admin">-->
-                        <!--No-->
-                        <!--</span>-->
-                        <!--</td>-->
-                        <td>
-                            <a class="btn btn-default btn-xs icon-btn md-btn-flat user-tooltip"
+                        <td scope="col" style="text-align:center;">
+                        <span class="badge badge-outline-success" *ngIf="page.hasCards">
+                            <i class="fa fa-check-circle"></i>
+                        </span>
+                            <span class="badge badge-outline-danger" *ngIf="!page.hasCards">
+                            <i class="fa fa-times-circle"></i>
+                        </span>
+                        </td>
+                        <td scope="col" class="text-center">
+                            <span class="badge badge-outline-success" *ngIf="page.isGrandchildPage">
+                            <i class="fa fa-check-square"></i>
+                        </span>
+                            <span class="badge badge-outline-danger" *ngIf="!page.isGrandchildPage">
+                            <i class="fa fa-times-square"></i>
+                        </span>
+                        </td>
+                        <td style="text-align:center;">
+                            <a class="btn btn-default btn-sm icon-btn md-btn-flat user-tooltip"
                                [routerLink]="['/admin/pages/', page.url]">
                                 <i class="fa fa-pencil"></i>&nbsp;
                             </a>
@@ -87,23 +103,23 @@
                 </table>
             </div>
 
-            <nav aria-label="Page navigation example">
-                <ul class="pagination">
-                    <li class="page-item">
-                        <a class="page-link" [routerLink]="['/admin/pages']" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                    </li>
-                    <li class="page-item"><a class="page-link" [routerLink]="['/admin/pages']">1</a></li>
-                    <li class="page-item">
-                        <a class="page-link" [routerLink]="['/admin/pages']" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+            <!--<nav aria-label="Page navigation example">-->
+            <!--<ul class="pagination">-->
+            <!--<li class="page-item">-->
+            <!--<a class="page-link" [routerLink]="['/admin/pages']" aria-label="Previous">-->
+            <!--<span aria-hidden="true">&laquo;</span>-->
+            <!--<span class="sr-only">Previous</span>-->
+            <!--</a>-->
+            <!--</li>-->
+            <!--<li class="page-item"><a class="page-link" [routerLink]="['/admin/pages']">1</a></li>-->
+            <!--<li class="page-item">-->
+            <!--<a class="page-link" [routerLink]="['/admin/pages']" aria-label="Next">-->
+            <!--<span aria-hidden="true">&raquo;</span>-->
+            <!--<span class="sr-only">Next</span>-->
+            <!--</a>-->
+            <!--</li>-->
+            <!--</ul>-->
+            <!--</nav>-->
 
         </div>
 
