Add function to set users's latest login date

--- a/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
+++ b/src/app/components/admin/admin-page/admin-page-edit/admin-page-edit.component.html
@@ -399,7 +399,7 @@
                                 </div>
 
 
-                                <ddw-admin-image-uploader-item></ddw-admin-image-uploader-item>
+                                <ddw-admin-image-uploader-item *ngIf="!isExtURL"></ddw-admin-image-uploader-item>
 
 
                                 <div class="form-group" *ngIf="!page.isExtURL">
