--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -378,7 +378,7 @@
                                 </p>
                             </div>
 
-                            <ddw-admin-image-uploader-item></ddw-admin-image-uploader-item>
+                            <ddw-admin-image-uploader-item *ngIf="!isExtURL"></ddw-admin-image-uploader-item>
 
 
                             <div class="form-group" *ngIf="!isExtURL">
